<resources>
    <string name="app_name">SpaceFlight</string>
    <string name="no_connection_message">No internet connection</string>
    <string name="service_unavailable_message">Service unavailable</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="update">Update data</string>
    <string name="articles">ARTICLE</string>
    <string name="blogs">BLOG</string>
    <string name="reports">REPORT</string>


    <string name="please_wait">Loading…</string>
    <string name="astra_plans">Astra plans next orbital launch attempt from Alasks</string>
    <string name="together_na">Together, NASA and SpaceX have successfully executed similarly bold and innovative partnerships, including restoring Americaâs ability to launch astronauts to orbit and return them safely home. \nWe will build upon our shared accomplishments</string>
    <string name="spaceflight">SpaceFlight Now</string>
    <string name="april_2020">19april ,2020</string>
    <string name="no_cache">Sorry i could\'t find the cache. Please click on heart icon to add one</string>
    <string name="change_item_status">Change item status?</string>
    <string name="yes">yes</string>
    <string name="no_results">No Results</string>
    <string name="search_results">Search Results</string>
    <string name="no_connection">No connection to network. Please, check and try again later.</string>
    <string name="action_search">search</string>
    <string name="service_unavailable">Service is unavailable. Try again later.</string>
    <string name="invalid_input_message">Input data is invalid! Please type the year of launches (e.g. 2018)</string>
    <string name="retry">retry</string>
    <string name="mission_name">%s </string>
    <string name="flight_number">Flight N: %s</string>
    <string name="launch_year">Launch year: %s</string>
    <string name="launch_date">Launch date: %s</string>
    <string name="rocket">Rocket info: %s</string>
    <string name="ships">Ships:\n%s</string>
    <string name="place">Launch place: %s</string>
    <string name="launch_success">Launch Success</string>
    <string name="details">%s</string>
    <string name="pdf">PDF: %s</string>
    <string name="tutorial">It\'s search screen. To find some information about SpaceX launches just type the
        year in the action bar.
    </string>
    <string name="or_tap_back_to_return_on_the_main_screen">Or tap back to return on the news screen</string>
    <string name="last_attempt_to_update">Last attempt to update :</string>
    <string name="nasa">NASA photo of the day</string>
    <string name="succesfully_Changed">Status of the item successfully changed</string>
    <string name="precision">Date precision : %s</string>
    <string name="upcoming">Upcoming</string>
    <string name="wiki">Wikipedia \n %s</string>
    <string name="reddit">Reddit \n %s</string>
    <string name="remain">Time to launch: %s</string>
    <string name="search_upcoming">Tap to look for upcoming launches</string>
</resources>