<?xml version="1.0" encoding="utf-8"?>
<com.myapp.spaceflightapp.core.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sml"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#00000000">

        <com.myapp.spaceflightapp.core.CustomTextViewTitle
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/paddingSide"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/paddingSide"
            android:ellipsize="end"
            android:fontFamily="@font/bittermedium"
            android:gravity="center"
            android:text="@string/astra_plans"
            android:textAppearance="@style/astra_plans"
            android:textStyle="normal" />

        <com.myapp.spaceflightapp.core.CustomImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/paddingSide"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/paddingSide"
            android:adjustViewBounds="true"
            tools:background="@mipmap/ic_launchers" />

        <com.myapp.spaceflightapp.core.CustomTextViewSummary
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/paddingSide"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/paddingSide"
            android:fontFamily="@font/bitterregular"
            android:gravity="top"

            android:text="@string/together_na"
            android:textAppearance="@style/together_na"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/summary"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp">

            <com.myapp.spaceflightapp.core.CustomTextViewPublished
                android:id="@+id/publishedAt"
                android:layout_width="73dp"
                android:layout_height="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/bitterregular"
                android:gravity="center_vertical"
                android:text="@string/april_2020"
                android:textAppearance="@style/april_2020" />

            <ImageView
                android:id="@+id/icons"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0.5dp"
                android:outlineSpotShadowColor="#6788FF"
                android:src="@drawable/baseline_new_releases_black_24"
                app:color="#6788FF" />

            <com.myapp.spaceflightapp.core.CustomTextViewUpdated
                android:id="@+id/updatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/bitterregular"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/april_2020"
                android:textAppearance="@style/april_2020" />

            <ImageView
                android:layout_width="14dp"
                android:layout_height="15dp"
                android:layout_below="@+id/icons"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0dp"
                android:background="#00000000"
                android:src="@drawable/baseline_person_black_24" />

        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#6d6d6d">

        <ImageButton
            android:id="@+id/share"
            android:layout_width="50dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:outlineSpotShadowColor="#CA3715"
            android:src="@drawable/outline_share_white_36"
            app:color="#CA3715" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#a4a4a4">

        <com.myapp.spaceflightapp.core.CustomFavorite
            android:id="@+id/favorite"
            android:layout_width="50dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:src="@drawable/outline_favorite_border_white_36" />
    </RelativeLayout>

</com.myapp.spaceflightapp.core.SwipeMenuLayout>